manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: adfTestingApp
  name: fhir-converter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adfTestingApp
  template:
    metadata:
      labels:
        app: adfTestingApp
    spec:
      containers:
        - name: fhir-converter
          image: ghcr.io/cdcgov/phdi/fhir-converter:v1.0.7
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: fhir-converter
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: adfTestingApp
  name: ingestion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adfTestingApp
  template:
    metadata:
      labels:
        app: adfTestingApp
    spec:
      containers:
        - name: ingestion
          image: ghcr.io/cdcgov/phdi/ingestion:v1.0.7
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: ingestion
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: adfTestingApp
  name: tabulation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adfTestingApp
  template:
    metadata:
      labels:
        app: adfTestingApp
    spec:
      containers:
        - name: tabulation
          image: ghcr.io/cdcgov/phdi/tabulation:v1.0.7
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: tabulation
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: adfTestingApp
  name: alerts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adfTestingApp
  template:
    metadata:
      labels:
        app: adfTestingApp
    spec:
      containers:
        - name: alerts
          image: ghcr.io/cdcgov/phdi/alerts:v1.0.7
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: alerts
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: adfTestingApp
  name: validation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adfTestingApp
  template:
    metadata:
      labels:
        app: adfTestingApp
    spec:
      containers:
        - name: validation
          image: ghcr.io/cdcgov/phdi/validation:v1.0.7
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: validation
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: adfTestingApp
  name: message-parser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adfTestingApp
  template:
    metadata:
      labels:
        app: adfTestingApp
    spec:
      containers:
        - name: message-parser
          image: ghcr.io/cdcgov/phdi/message-parser:v1.0.7
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: message-parser
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   labels:
#     app: adfTestingApp
#   name: record-linkage
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: adfTestingApp
#   template:
#     metadata:
#       labels:
#         app: adfTestingApp
#     spec:
#       containers:
#         - name: record-linkage
#           image: ghcr.io/cdcgov/phdi/record-linkage:v1.0.7
#           imagePullPolicy: Always
#           ports:
#             - containerPort: 8080
#               name: record-linkage
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: adfTestingApp
  name: kafka-to-delta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adfTestingApp
  template:
    metadata:
      labels:
        app: adfTestingApp
    spec:
      containers:
        - name: kafka-to-delta
          image: ghcr.io/cdcgov/phdi/kafka-to-delta-table:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: kafka-to-delta
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   labels:
#     app: adfTestingApp
#   name: read-source
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: adfTestingApp
#   template:
#     metadata:
#       labels:
#         app: adfTestingApp
#     spec:
#       containers:
#         - name: read-source
#           image: ghcr.io/cdcgov/adfTestingApp/read-source-data:v1.0.7
#           imagePullPolicy: Always
#           ports:
#             - containerPort: 8080
#               name: read-source
---
apiVersion: v1
kind: Service
metadata:
  name: v2-test-load-balancer
spec:
  type: LoadBalancer
  ports:
    - name: fhir-converter
      port: 80
      targetPort: 8080
    - name: ingestion
      port: 81
      targetPort: 8080
    - name: tabulation
      port: 82
      targetPort: 8080
    - name: alerts
      port: 83
      targetPort: 8080
    - name: validation
      port: 84
      targetPort: 8080
    - name: message-parser
      port: 85
      targetPort: 8080
    - name: kafka-to-delta
      port: 86
      targetPort: 8080
    # - name: record-linkage
    #   port: 86
    #   targetPort: 8080
    # - name: read-source
    #   port: 88
    #   targetPort: 8080
  selector:
    app: adfTestingApp
